--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
           <h2 class="h2-hidden">our_advantages</h2>
           <ul class="list advantages-menu">
             <li class="list-advantages">
+              <div class="advantege-container-icon">
+                <svg class="advantage-icon">
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="subtitle subtitle-advantages">Strategy</h3>
               <p class="text-main text-advantages">
                 Our goal is to identify the business problem to walk away with the perfect and
@@ -85,20 +90,37 @@
               </p>
             </li>
             <li class="list-advantages">
+              <div class="advantege-container-icon">
+                <svg class="advantage-icon">
+                  <use href="./images/icons.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="subtitle subtitle-advantages">Punctuality</h3>
               <p class="text-main advantages-text">
                 Bring the key message to the brand's audience for the best price within the shortest
                 possible time.
               </p>
             </li>
+
             <li class="list-advantages">
+              <div class="advantege-container-icon">
+                <svg class="advantage-icon">
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="subtitle subtitle-advantages">Diligence</h3>
               <p class="text-main advantages-text">
                 Research and confirm brands that present the strongest digital growth opportunities
                 and minimize risk.
               </p>
             </li>
+
             <li class="list-advantages">
+              <div class="advantege-container-icon">
+                <svg class="advantage-icon">
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="subtitle subtitle-advantages">Technologies</h3>
               <p class="text-main advantages-text">
                 Design practice focused on digital experiences. We bring forth a deep passion for
@@ -155,6 +177,36 @@
               <div class="team-card">
                 <h3 class="subtitle subtitle-team">Mark Guerrero</h3>
                 <p class="text-main text-team">Product Designer</p>
+                <ul class="list team-card-menu">
+                  <li class="team-card-list">
+                    <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
+                      <svg class="team-card-icon">
+                        <use href="./images/icons.svg#icon-instagram1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-card-list">
+                    <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
+                      <svg class="team-card-icon">
+                        <use href="./images/icons.svg#icon-twitter1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-card-list">
+                    <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
+                      <svg class="team-card-icon">
+                        <use href="./images/icons.svg#icon-facebook1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-card-list">
+                    <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
+                      <svg class="team-card-icon">
+                        <use href="./images/icons.svg#icon-linkedin1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list">
@@ -167,6 +219,36 @@
               <div class="team-card">
                 <h3 class="subtitle subtitle-team">Tom Ford</h3>
                 <p class="text-main text-team">Frontend Developer</p>
+                <ul class="list team-card-menu">
+                  <li class="team-card-list">
+                    <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
+                      <svg class="team-card-icon">
+                        <use href="./images/icons.svg#icon-instagram1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-card-list">
+                    <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
+                      <svg class="team-card-icon">
+                        <use href="./images/icons.svg#icon-twitter1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-card-list">
+                    <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
+                      <svg class="team-card-icon">
+                        <use href="./images/icons.svg#icon-facebook1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-card-list">
+                    <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
+                      <svg class="team-card-icon">
+                        <use href="./images/icons.svg#icon-linkedin1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list">
@@ -174,6 +256,36 @@
               <div class="team-card">
                 <h3 class="subtitle subtitle-team">Camila Garcia</h3>
                 <p class="text-main text-team">Marketing</p>
+                <ul class="list team-card-menu">
+                  <li class="team-card-list">
+                    <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
+                      <svg class="team-card-icon">
+                        <use href="./images/icons.svg#icon-instagram1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-card-list">
+                    <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
+                      <svg class="team-card-icon">
+                        <use href="./images/icons.svg#icon-twitter1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-card-list">
+                    <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
+                      <svg class="team-card-icon">
+                        <use href="./images/icons.svg#icon-facebook1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-card-list">
+                    <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
+                      <svg class="team-card-icon">
+                        <use href="./images/icons.svg#icon-linkedin1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list">
@@ -181,7 +293,87 @@
               <div class="team-card">
                 <h3 class="subtitle subtitle-team">Daniel Wilson</h3>
                 <p class="text-main text-team">UI Designer</p>
+                <ul class="list team-card-menu">
+                  <li class="team-card-list">
+                    <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
+                      <svg class="team-card-icon">
+                        <use href="./images/icons.svg#icon-instagram1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-card-list">
+                    <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
+                      <svg class="team-card-icon">
+                        <use href="./images/icons.svg#icon-twitter1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-card-list">
+                    <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
+                      <svg class="team-card-icon">
+                        <use href="./images/icons.svg#icon-facebook1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-card-list">
+                    <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
+                      <svg class="team-card-icon">
+                        <use href="./images/icons.svg#icon-linkedin1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- Customers -->
+      <section class="customers">
+        <div class="container">
+          <h2 class="customers-title title">Customers</h2>
+          <ul class="list customers-menu">
+            <li class="customers-list">
+              <a class="customers-item" href="" target="_blank" rel="noopener noreferrer">
+                <svg class="customers-icon">
+                  <use href="./images/icons.svg#icon-Client1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list">
+              <a class="customers-item" href="" target="_blank" rel="noopener noreferrer">
+                <svg class="customers-icon">
+                  <use href="./images/icons.svg#icon-Client2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list">
+              <a class="customers-item" href="" target="_blank" rel="noopener noreferrer">
+                <svg class="customers-icon">
+                  <use href="./images/icons.svg#icon-Client3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list">
+              <a class="customers-item" href="" target="_blank" rel="noopener noreferrer">
+                <svg class="customers-icon">
+                  <use href="./images/icons.svg#icon-Client4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list">
+              <a class="customers-item" href="" target="_blank" rel="noopener noreferrer">
+                <svg class="customers-icon">
+                  <use href="./images/icons.svg#icon-Client5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list">
+              <a class="customers-item" href="" target="_blank" rel="noopener noreferrer">
+                <svg class="customers-icon">
+                  <use href="./images/icons.svg#icon-Client6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
