--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <li class="list-advantages">
               <div class="advantege-container-icon">
                 <svg class="advantage-icon">
-                  <use href="./images/icons.svg#icon-antenna-1"></use>
+                  <use href="./images/icons.svg#icon-antenna1"></use>
                 </svg>
               </div>
               <h3 class="subtitle subtitle-advantages">Strategy</h3>
@@ -92,7 +92,7 @@
             <li class="list-advantages">
               <div class="advantege-container-icon">
                 <svg class="advantage-icon">
-                  <use href="./images/icons.svg#icon-clock-1"></use>
+                  <use href="./images/icons.svg#icon-clock1"></use>
                 </svg>
               </div>
               <h3 class="subtitle subtitle-advantages">Punctuality</h3>
@@ -105,7 +105,7 @@
             <li class="list-advantages">
               <div class="advantege-container-icon">
                 <svg class="advantage-icon">
-                  <use href="./images/icons.svg#icon-diagram-1"></use>
+                  <use href="./images/icons.svg#icon-diagram1"></use>
                 </svg>
               </div>
               <h3 class="subtitle subtitle-advantages">Diligence</h3>
@@ -118,7 +118,7 @@
             <li class="list-advantages">
               <div class="advantege-container-icon">
                 <svg class="advantage-icon">
-                  <use href="./images/icons.svg#icon-astronaut-1"></use>
+                  <use href="./images/icons.svg#icon-astronaut1"></use>
                 </svg>
               </div>
               <h3 class="subtitle subtitle-advantages">Technologies</h3>
@@ -381,14 +381,19 @@
     </main>
     <!-- footer -->
     <footer class="footer">
-      <div class="container">
-        <a class="logo-web link logo-web-margin" href="./index.html"
-          >Web<span class="logo-white link">Studio</span></a
-        >
-        <p class="text-footer">
-          Increase the flow of customers and sales for your business with digital marketing & growth
-          solutions.
-        </p>
+      <div class="container footer-container">
+        <div>
+          <a class="logo-web link logo-web-margin" href="./index.html"
+            >Web<span class="logo-white link">Studio</span></a
+          >
+          <p class="text-footer">
+            Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.
+          </p>
+        </div>
+        <div> 
+          
+        </div>
       </div>
     </footer>
   </body>
