--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <ul class="list advantages-menu">
             <li class="list-advantages">
               <div class="advantege-container-icon">
-                <svg class="advantage-icon">
+                <svg class="advantage-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna1"></use>
                 </svg>
               </div>
@@ -91,7 +91,7 @@
             </li>
             <li class="list-advantages">
               <div class="advantege-container-icon">
-                <svg class="advantage-icon">
+                <svg class="advantage-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock1"></use>
                 </svg>
               </div>
@@ -101,10 +101,9 @@
                 possible time.
               </p>
             </li>
-
             <li class="list-advantages">
               <div class="advantege-container-icon">
-                <svg class="advantage-icon">
+                <svg class="advantage-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram1"></use>
                 </svg>
               </div>
@@ -114,10 +113,9 @@
                 and minimize risk.
               </p>
             </li>
-
             <li class="list-advantages">
               <div class="advantege-container-icon">
-                <svg class="advantage-icon">
+                <svg class="advantage-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut1"></use>
                 </svg>
               </div>
@@ -180,28 +178,28 @@
                 <ul class="list team-card-menu">
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon">
+                      <svg class="team-card-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon">
+                      <svg class="team-card-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon">
+                      <svg class="team-card-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon">
+                      <svg class="team-card-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin1"></use>
                       </svg>
                     </a>
@@ -222,28 +220,28 @@
                 <ul class="list team-card-menu">
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon">
+                      <svg class="team-card-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon">
+                      <svg class="team-card-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon">
+                      <svg class="team-card-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon">
+                      <svg class="team-card-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin1"></use>
                       </svg>
                     </a>
@@ -259,28 +257,28 @@
                 <ul class="list team-card-menu">
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon">
+                      <svg class="team-card-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon">
+                      <svg class="team-card-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon">
+                      <svg class="team-card-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon">
+                      <svg class="team-card-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin1"></use>
                       </svg>
                     </a>
@@ -296,28 +294,28 @@
                 <ul class="list team-card-menu">
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon">
+                      <svg class="team-card-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon">
+                      <svg class="team-card-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon">
+                      <svg class="team-card-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon">
+                      <svg class="team-card-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin1"></use>
                       </svg>
                     </a>
@@ -335,42 +333,42 @@
           <ul class="list customers-menu">
             <li class="customers-list">
               <a class="customers-item" href="" target="_blank" rel="noopener noreferrer">
-                <svg class="customers-icon">
+                <svg class="customers-icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-Client1"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list">
               <a class="customers-item" href="" target="_blank" rel="noopener noreferrer">
-                <svg class="customers-icon">
+                <svg class="customers-icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-Client2"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list">
               <a class="customers-item" href="" target="_blank" rel="noopener noreferrer">
-                <svg class="customers-icon">
+                <svg class="customers-icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-Client3"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list">
               <a class="customers-item" href="" target="_blank" rel="noopener noreferrer">
-                <svg class="customers-icon">
+                <svg class="customers-icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-Client4"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list">
               <a class="customers-item" href="" target="_blank" rel="noopener noreferrer">
-                <svg class="customers-icon">
+                <svg class="customers-icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-Client5"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list">
               <a class="customers-item" href="" target="_blank" rel="noopener noreferrer">
-                <svg class="customers-icon">
+                <svg class="customers-icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-Client6"></use>
                 </svg>
               </a>
@@ -391,8 +389,38 @@
             growth solutions.
           </p>
         </div>
-        <div> 
-          
+        <div>
+          <p class="footer-text-social"> Social media </p>
+          <ul class="footer-menu list">
+            <li class="footer-list">
+              <a class="footer-item" href="" target="_blank" rel="noopener noreferrer">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-list">
+              <a class="footer-item" href="" target="_blank" rel="noopener noreferrer">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-tweeter2"></use>
+                </svg>
+              </a>
+              </li>
+            <li class="footer-list">
+              <a class="footer-item" href="" target="_blank" rel="noopener noreferrer">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-list">
+              <a class="footer-item" href="" target="_blank" rel="noopener noreferrer">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin2"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
