--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
 
           <ul class="list portfolio-menu">
             <li class="portfolio-item">
-              <a class="list link" href="">
+              <a class="portfolio-item link" href="">
                 <img
                   src="./images/img1.jpg"
                   alt="app Banking App Interface Concept"
