--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       </section>
       <!-- Team -->
       <section class="team">
-        <div class="container color">
+        <div class="container team-color">
           <h2 class="title title-team">Our Team</h2>
           <ul class="list team-menu">
             <li class="team-list">
@@ -178,28 +178,28 @@
                 <ul class="list team-card-menu">
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon" width="16" height="16">
+                      <svg class="team-card-icon" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon" width="16" height="16">
+                      <svg class="team-card-icon" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon" width="16" height="16">
+                      <svg class="team-card-icon" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon" width="16" height="16">
+                      <svg class="team-card-icon" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-linkedin1"></use>
                       </svg>
                     </a>
@@ -220,28 +220,28 @@
                 <ul class="list team-card-menu">
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon" width="16" height="16">
+                      <svg class="team-card-icon" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon" width="16" height="16">
+                      <svg class="team-card-icon" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon" width="16" height="16">
+                      <svg class="team-card-icon" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon" width="16" height="16">
+                      <svg class="team-card-icon" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-linkedin1"></use>
                       </svg>
                     </a>
@@ -257,28 +257,28 @@
                 <ul class="list team-card-menu">
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon" width="16" height="16">
+                      <svg class="team-card-icon" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon" width="16" height="16">
+                      <svg class="team-card-icon" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon" width="16" height="16">
+                      <svg class="team-card-icon" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon" width="16" height="16">
+                      <svg class="team-card-icon" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-linkedin1"></use>
                       </svg>
                     </a>
@@ -294,28 +294,28 @@
                 <ul class="list team-card-menu">
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon" width="16" height="16">
+                      <svg class="team-card-icon" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon" width="16" height="16">
+                      <svg class="team-card-icon" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon" width="16" height="16">
+                      <svg class="team-card-icon" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-card-list">
                     <a class="team-card-item" href="" target="_blank" rel="noopener noreferrer">
-                      <svg class="team-card-icon" width="16" height="16">
+                      <svg class="team-card-icon" width="16" height="16" fill="f4f4fd">
                         <use href="./images/icons.svg#icon-linkedin1"></use>
                       </svg>
                     </a>
@@ -380,7 +380,7 @@
     <!-- footer -->
     <footer class="footer">
       <div class="container footer-container">
-        <div>
+        <div claass="footer-container-logo">
           <a class="logo-web link logo-web-margin" href="./index.html"
             >Web<span class="logo-white link">Studio</span></a
           >
@@ -389,8 +389,8 @@
             growth solutions.
           </p>
         </div>
-        <div>
-          <p class="footer-text-social"> Social media </p>
+        <div class="">
+          <p class="footer-text-social">Social media</p>
           <ul class="footer-menu list">
             <li class="footer-list">
               <a class="footer-item" href="" target="_blank" rel="noopener noreferrer">
