--- a/portfolio.html
+++ b/portfolio.html
@@ -13,19 +13,13 @@
       rel="stylesheet"
     />
     <!-- Normalize -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- header -->
     <!-- header -->
-    <header class="header">
+     <header class="header">
       <div class="header-container container">
         <nav class="header-nav">
           <a class="logo-web link" href="./index.html"
@@ -61,7 +55,6 @@
         </address>
       </div>
     </header>
-
     <!-- main -->
     <main>
       <!-- filter menu -->
@@ -89,7 +82,7 @@
           <!-- porfolio -->
 
           <ul class="list portfolio-menu">
-            <li class="portfolio-item">
+            <li class="portfolio-list">
               <a class="portfolio-item link" href="">
                 <img
                   src="./images/img1.jpg"
