--- a/index.html
+++ b/index.html
@@ -394,28 +394,28 @@
           <ul class="footer-menu list">
             <li class="footer-list">
               <a class="footer-item" href="" target="_blank" rel="noopener noreferrer">
-                <svg class="" width="24" height="24">
+                <svg class="footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram1"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-list">
               <a class="footer-item" href="" target="_blank" rel="noopener noreferrer">
-                <svg class="" width="24" height="24">
+                <svg class="footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter1"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-list">
               <a class="footer-item" href="" target="_blank" rel="noopener noreferrer">
-                <svg class="" width="24" height="24">
+                <svg class="footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook1"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-list">
               <a class="footer-item" href="" target="_blank" rel="noopener noreferrer">
-                <svg class="" width="24" height="24">
+                <svg class="footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin1"></use>
                 </svg>
               </a>
