--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
           <ul class="list customers-menu">
             <li class="customers-list">
               <a class="customers-item" href="" target="_blank" rel="noopener noreferrer">
-                <svg class="" width="104" height="56">
+                <svg class="customers-icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-Client1"></use>
                 </svg>
               </a>
