--- a/portfolio.html
+++ b/portfolio.html
@@ -147,7 +147,7 @@
                   width="360"
                   height="300"
                 />
-                <div class="portfolio-list">
+                <div class="portfolio-card">
                   <h2 class="subtitle subtitle-card"> Screen Illustrations </h2>
                   <p class="text-main text-card">Design</p>
                 </div>
